--- a/resources/[essential]/es_extended/html/ui.html
+++ b/resources/[essential]/es_extended/html/ui.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		
-		<!--<div id="hud"></div>-->
+		<div id="hud"></div>
 		<div id="inventory_notifications"></div>
 
 		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
